# Final-Project

FinalProject/: InboxWorld_Colab_Notebook.ipynb  README.md  app.py  pyproject.toml  requirements.txt
FinalProject/artifacts/: pitch_report.json
FinalProject/artifacts/adaptive_environment/multi_agent/: simulation_metrics.json
FinalProject/artifacts/training/: transition_buffer.json
FinalProject/docs/: BENCHMARK_TEMPLATE.md  ENVIRONMENT_SPEC.md  HF_MINI_BLOG.md
FinalProject/scripts/: build_report.py  convert_svg_to_png_hack.py  minimal_trl_train.py  rl_training_stub.py
FinalProject/src/inboxworld/: agents.py  environment.py  llm_inference.py  reward_calculator.py  simulator.py  training.py
